--- a/assets/css/ud-styles.css
+++ b/assets/css/ud-styles.css
@@ -1495,7 +1495,7 @@ p {
 }
 
 .ud-widget .ud-footer-logo {
-  max-width: 100px;
+  max-width: 80px;
   display: block;
   margin-bottom: 10px;
   margin-left: 15px;
@@ -1511,6 +1511,7 @@ p {
   color: #f3f4fe;
   margin-bottom: 0px;
   max-width: 800px;
+  visibility: hidden;
 }
 
 .ud-widget .ud-widget-socials {
@@ -1520,7 +1521,8 @@ p {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-          margin-bottom: 10px;
+          margin-top: 10px;
+          margin-left: -20px;
 }
 
 .ud-widget .ud-widget-socials a {
@@ -1638,6 +1640,7 @@ p {
     margin-top: 10px;
   }
 }
+
 
 /* ====== Banner CSS ======= */
 .ud-page-banner {
